--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-fastapi~=0.88.0
-uvicorn~=0.20.0
 SQLAlchemy==1.4.46
-pydantic==1.10.4
 psycopg2~=2.9.5
 celery~=5.2.7
 alembic~=1.9.1
+requests==2.28.1
+pip==22.3.1
+Pillow==9.4.0
+Jinja2~=3.1.2
+setuptools==65.6.3
