--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,21 @@ version: "3.8"
 services:
   server:
     build: .
+    entrypoint: ./entrypoint-server.sh
     ports:
       - "8080:8080"
     volumes:
       - .:/usr/warehouse-intexsoft-intership
+    env_file:
+      - .env
+    depends_on:
+      - db
+
+  worker:
+    build: .
+    entrypoint: ./entrypoint-celery.sh
+    volumes:
+      - .:/usr/test_project
     env_file:
       - .env
     depends_on:
@@ -18,4 +29,12 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "5430:5430"
+      - "5430:5432"
+      -
+  rabbitmq:
+    image: rabbitmq:3.9.0-management-alpine
+    environment:
+      RABBITMQ_BROKER: ${RABBITMQ_BROKER}
+    ports:
+      - "5672:5672"
+      - "15672:15672"
