work with rabbitmq

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     build: .
     entrypoint: ./entrypoint-celery.sh
     volumes:
-      - .:/usr/test_project
+      - .:/usr/warehouse-intexsoft-intership
     env_file:
       - .env
     depends_on:
@@ -30,7 +30,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
       - "5430:5432"
-      -
+
   rabbitmq:
     image: rabbitmq:3.9.0-management-alpine
     environment:
